myjss-services labels and pictures updates

--- a/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
+++ b/client-myjss/src/app/modules/my-services/components/announcement/announcement.component.html
@@ -9,7 +9,7 @@
         <p class="text-body fs-lg mb-5 text-white">Publiez vos annonces légales en quelques clics 24/7 sur MyJSS notre
           plateforme sécurisée.</p>
         <double-buttons class="text-grey" orderActionLabel=" Publier une annonce légale"
-          quotationActionLabel="Demander un devis" linkLabel="Consulter une annonce légale" [isLightButtons]="true">
+          quotationActionLabel="Demander un devis" linkLabel="Consulter les annonces légales" [isLightButtons]="true">
         </double-buttons>
       </div>
     </div>
@@ -17,7 +17,8 @@
 </section>
 <section>
   <div class="jarallax overflow-hidden z-2" data-speed="0.5">
-    <div class="jarallax-img" style="background-image: url('/assets/img/announcement/annonce_bandeau_img.jpg');"></div>
+    <div class="jarallax-img"
+      style="background-image: url('/assets/img/myjss-services/announcement/banniere_annonces.jpg');"></div>
   </div>
 </section>
 
@@ -26,9 +27,9 @@
   firstStepTitle="Sélectionnez votre modèle"
   firstStepDescription="Accédez à une bibliothèque complète de formulaires adaptés à vos besoins en annonces légales."
   secondStepTitle=" Remplissez, visualisez et validez votre annonce"
-  secondStepDescription="Profitez d’une saisie libre ou guidée grâce à nos modèles intuitifs. Obtenez le prix instantanément."
+  secondStepDescription="Profitez d’une saisie libre ou guidée et obtenez le prix instantanément."
   thirdStepTitle="Complétez vos coordonnées et payez"
-  thirdStepDescription="Bénéficiez d’une interface sécurisée et fiable pour le traitement de vos informations personnelles."
+  thirdStepDescription="Bénéficiez d’une interface sécurisée et fiable pour le traitement de vos informations bancaires."
   [firstJumpTo]="5" [secondJumpTo]="15"></explaination-video>
 
 <description-my-account></description-my-account>
@@ -42,7 +43,7 @@
         </h2>
         <div class="image-height d-lg-block d-none">
           <div class="card h-100 border-0">
-            <img src="assets/img/announcement/carousel_announcement_init.jpg" class="card object-fit-cover h-100"
+            <img src="assets/img/myjss-services/announcement/annonces_courantes.jpg" class="card object-fit-cover h-100"
               alt="Card image">
           </div>
         </div>
@@ -88,7 +89,7 @@
       </div>
 
       <div class="col-md-6 holo-img">
-        <img class="d-none d-md-block" src="assets/img/announcement/holo_employe.png" alt="Image">
+        <img class="d-none d-md-block" src="assets/img/myjss-services/announcement/Didier.png" alt="Image">
       </div>
     </div>
   </div>
@@ -184,7 +185,7 @@
   <div class="container">
     <div class="row g-4">
       <div class="col-md-7 order-md-2">
-        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/announcement/announcement_office.jpg"
+        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/myjss-services/announcement/insertions.png"
           alt="Image">
       </div>
       <div class="col-md-5 order-md-1">
@@ -222,7 +223,7 @@
     <div class="col-md-6 position-relative pb-3 pb-md-0 mb-2 mb-sm-3 mb-md-0">
       <div class="binded-content z-2">
         <div class="binded-item active" id="image1">
-          <img class="d-block rounded-5" src="assets/img/announcement/annoucement2.png" alt="Image">
+          <img class="d-block rounded-5" src="assets/img/myjss-services/announcement/Chiffres.png" alt="Image">
         </div>
       </div>
     </div>
