--- a/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
+++ b/client-myjss/src/app/modules/my-services/components/apostille/apostille.component.html
@@ -7,7 +7,7 @@
 
       <div class="col-md-6 col-xl-5 offset-xl-1">
         <p class="text-body fs-lg mb-5 text-white">Confiez à nos experts vos documents à authentifier pour une démarche
-          à l'étranger ou en France d’entreprise étrangère.</p>
+          à l'étranger ou en France.</p>
         <double-buttons orderActionLabel="Demander une apostille ou légalisation"
           quotationActionLabel="Demander un devis" linkLabel="Lien vers le simulateur">
         </double-buttons>
@@ -17,10 +17,10 @@
 </section>
 <section>
   <div class="jarallax rounded overflow-hidden z-2" data-speed="0.5">
-    <div class="jarallax-img" style="background-image: url('/assets/img/announcement/annonce_bandeau_img.jpg');"></div>
+    <div class="jarallax-img"
+      style="background-image: url('/assets/img/myjss-services/apostilles/banniere_apostilles.jpg');"></div>
   </div>
 </section>
-
 
 <explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg"
   videoPath="assets/images/test_video.mp4" title="Authentifiez vos documents pour l’étranger en 3 étapes"
@@ -34,18 +34,16 @@
 
 <description-my-account></description-my-account>
 
-
-<section class="container mt-lg-3 mt-xl-4 mt-xxl-5">
+<section class="container mt-lg-3 mt-xl-4 mt-xxl-5 pt-lg-5 pt-sm-3 pt-2">
   <div class="bg-yellow-custom rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
     <div class="row align-items-center position-relative">
       <div class="col-md-6 col-lg-5 offset-lg-1 text-container">
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
           <div class="d-flex align-items-center justify-content-center justify-content-md-start mb-2">
-            <span class="text-blue opacity-70 me-2 d-none d-md-block"
-              style="width: 40px; height: 1px; margin-top: -1px;"></span>
-            <span class="fs-xs fw-semibold text-blue opacity-70 text-uppercase">Apostilles et légalisation</span>
+            <span class="text-blue opacity-70 me-2 " style="width: 40px; height: 1px; margin-top: -1px;"></span>
+            <span class="fs-xs fw-semibold text-blue text-uppercase">Apostilles et légalisation</span>
           </div>
-          <h2 class="h1 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
+          <h2 class="h2 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
           <double-buttons orderActionLabel="Demander une apostille ou légalisation"
             quotationActionLabel="Demander un devis" linkLabel="Lien vers l'outil" [isLightButtons]="false">
           </double-buttons>
@@ -53,12 +51,11 @@
       </div>
 
       <div class="col-md-6 holo-img">
-        <img class="d-none d-md-block" src="assets/img/announcement/holo_employe.png" alt="Image">
+        <img class="d-none d-md-block" src="assets/img/myjss-services/apostilles/holo_nico.png" alt="Image">
       </div>
     </div>
   </div>
 </section>
-
 
 <section class="py-5">
   <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5">
@@ -72,8 +69,8 @@
           <div class="card-body pb-3">
             <img src="assets/img/icons/assistance_dedie.svg" alt="Icon">
             <h3 class="h4 text-white">Assistance dédiée</h3>
-            <p class="mb-0">Nos équipes spécialisées sont à votre disposition pour vous conseiller, par téléphone ou
-              par e-mail. Bénéficiez d'un accompagnement précis et personnalisé !</p>
+            <p class="mb-0">Nos équipes vous consiellent par téléphone ou
+              par mail à chaque étape.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
           </div>
@@ -85,8 +82,7 @@
           <div class="card-body pb-3">
             <img src="assets/img/icons/expertise_reconnue.svg" alt="Icon">
             <h3 class="h4 text-white">Expertise reconnue</h3>
-            <p class="mb-0">Nous garantissons un service premium, incluant le conseil, la relecture approfondie, et la
-              rédaction optimisée de vos annonces légales, pour un traitement efficace !</p>
+            <p class="mb-0">Nous gérons les apostilles et légalisations pour l’ensemble des pays du monde.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
           </div>
@@ -98,8 +94,7 @@
           <div class="card-body pb-3">
             <img src="assets/img/icons/plateforme_intuitive.svg" alt="Icon">
             <h3 class="h4 text-white">Plateforme intuitive</h3>
-            <p class="mb-0">Obtenez en quelques secondes votre attestation de parution, disponible 24h/24 et 7j/7.
-              Simplifiez vos formalités en accédant instantanément à vos documents.</p>
+            <p class="mb-0">Effectuez vos demandes d'apostilles et légalisations en quelques clics.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
           </div>
@@ -126,12 +121,12 @@
   <div class="container">
     <div class="row g-4">
       <div class="col-md-7 order-md-1">
-        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/myjss-services/apostilles_office.jpg"
-          alt="Image">
+        <img class="object-fit-cover w-100 h-100 rounded-3"
+          src="assets/img/myjss-services/apostilles/service_sur_mesure.png" alt="Image">
       </div>
       <div class="col-md-5 order-md-2">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 py-5 px-4 px-lg-5">
-          <h2 class="mb-xl-4">Le JSS vous propose un service sur-mesure d’apostilles et de légalisations</h2>
+          <h2 class="mb-xl-4">MyJSS vous propose un service sur-mesure d’apostilles et de légalisations. </h2>
           <p class="mb-4 mb-xl-5">Selon le type de document et sa destination, nous déterminons s'il s’agit d’une
             apostille, d’une légalisation ou si une dispense s'applique.
             Nous gérons les différentes étapes de ces formalités de A à Z.</p>
@@ -154,7 +149,7 @@
             </li>
             <li class="d-flex">
               <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Cour d’Appel ou Consulat
+              Ambassade ou Consulat
             </li>
           </ul>
         </div>
@@ -167,11 +162,12 @@
   <div class="container">
     <div class="row g-4">
       <div class="col-md-7 order-md-2">
-        <img class="object-fit-cover w-100 h-100" src="assets/img/myjss-services/apostilles_office.jpg" alt="Image">
+        <img class="object-fit-cover rounded-3 w-100 h-100" src="assets/img/myjss-services/apostilles/Kbis.jpg"
+          alt="Image">
       </div>
       <div class="col-md-5 order-md-1">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 py-5 px-4 px-lg-5">
-          <h2 class="mb-xl-4">Le JSS commande et certifie votre Kbis</h2>
+          <h2 class="mb-xl-4">MyJSS commande votre Kbis (certifié si besoin)</h2>
           <p class="mb-4 mb-xl-5">Si vous devez faire apostiller ou légaliser un Kbis, nous pouvons également procéder à
             sa commande en original papier. </p>
 
@@ -190,8 +186,8 @@
   <div class="container">
     <div class="row g-4">
       <div class="col-md-7 order-md-1">
-        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/myjss-services/apostilles_office.jpg"
-          alt="Image">
+        <img class="object-fit-cover w-100 h-100 rounded-3"
+          src="assets/img/myjss-services/apostilles/myjss_occupe_tout.jpg" alt="Image">
       </div>
       <div class="col-md-5 order-md-2">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 py-5 px-4 px-lg-5">
@@ -203,7 +199,7 @@
             En fonction du pays de destination et du type de document, nous réalisons la procédure adaptée et assurons
             un suivi rigoureux à chaque étape. <br><br>Notre service inclut également la traduction assermentée de vos
             documents administratifs, juridiques et
-            techniques, réalisée par des experts agréés pour une reconnaissance officielle en France et à
+            techniques, réalisée par des experts agrés pour une reconnaissance officielle en France et à
             l’international.<br><br>Avec MyJSS, simplifiez vos démarches et obtenez des documents conformes aux
             exigences
             légales, rapidement et
