--- a/client-myjss/src/app/modules/my-services/components/description-my-account/description-my-account.component.html
+++ b/client-myjss/src/app/modules/my-services/components/description-my-account/description-my-account.component.html
@@ -2,13 +2,13 @@
   <div class="row pb-md-4 pb-xl-5">
     <div class="col-md-5 mb-2 mb-md-0">
       <div class="card border-0 h-100 bg-size-cover bg-position-center"
-        style="background-image: url(assets/img/account/parcourir_mon_compte.jpg);">
+        style="background-image: url(assets/img/myjss-services/myjss_phone.png);">
         <div class="d-none d-sm-block d-md-none" style="height: 450px;"></div>
         <div class="d-sm-none" style="height: 350px;"></div>
       </div>
     </div>
     <div class="col-md-1 d-flex align-items-end">
-      <img src="assets/img/announcement/vector.svg" />
+      <img src="assets/img/myjss-services/announcement/vector.svg" />
     </div>
 
     <div class="col-md-6">
@@ -17,7 +17,7 @@
         <div class="d-flex pb-3 mb-2 mb-xl-3">
           <div class="text-body-secondary pt-1">01</div>
           <div class="ps-3">
-            <h3 class="h5 text-white">Gestion de votre commande</h3>
+            <h3 class="h5 text-white">Consultation</h3>
             <p class="mb-0 text-body-secondary">Suivi de votre dossier en ligne via MyJSS et consultation des pièces
               obligatoires, avec une mise à jour en temps réel de l'avancement.</p>
           </div>
@@ -25,7 +25,7 @@
         <div class="d-flex pb-3 mb-2 mb-xl-3">
           <div class="text-body-secondary pt-1">02</div>
           <div class="ps-3">
-            <h3 class="h5 text-white">Périmètre</h3>
+            <h3 class="h5 text-white">Gestion globale</h3>
             <p class="mb-0">Accédez à l'ensemble de vos dossiers : commandes, devis, et suivez leur statut en temps
               réel.</p>
           </div>
@@ -33,17 +33,16 @@
         <div class="d-flex pb-3 mb-2 mb-xl-3">
           <div class="text-body-secondary pt-1">03</div>
           <div class="ps-3">
-            <h3 class="h5 text-white">Données sécurisées</h3>
-            <p class="mb-0">Téléchargez facilement tous vos documents importants : factures, Kbis, et autres pièces
-              justificatives en toute sécurité.</p>
+            <h3 class="h5 text-white">Téléchargement de vos documents</h3>
+            <p class="mb-0">Téléchargez facilement tous vos documents importants : Kbis, certificat de dépôt, acte
+              enregistré, facture et autres documents justificatifs en toute sécurité.</p>
           </div>
         </div>
         <div class="d-flex mb-2 mb-xl-3">
           <div class="text-body-secondary pt-1">04</div>
           <div class="ps-3">
             <h3 class="h5 text-white">Accompagnement sur mesure</h3>
-            <p class="mb-0">Une plateforme simple à utiliser pour vous faire gagner du temps, avec des échanges directs
-              en ligne avec votre formalité attitré et votre chargé de clientèle.</p>
+            <p class="mb-0">Echangez directement en ligne avec nos équipes d’experts.</p>
           </div>
         </div>
       </div>
