--- a/client-myjss/src/app/modules/my-services/components/document/document.component.html
+++ b/client-myjss/src/app/modules/my-services/components/document/document.component.html
@@ -8,7 +8,7 @@
       <div class="col-md-6 col-xl-5 offset-xl-1">
         <p class="text-body fs-lg mb-5 text-white">Tous les documents juridiques disponibles auprès des tribunaux de
           commerce en quelques clics !</p>
-        <double-buttons orderActionLabel="Demander mes documents" quotationActionLabel="Demander un devis">
+        <double-buttons orderActionLabel="Commander des documents" quotationActionLabel="Demander un devis">
         </double-buttons>
       </div>
     </div>
@@ -16,7 +16,8 @@
 </section>
 <section>
   <div class="jarallax overflow-hidden z-2" data-speed="0.5">
-    <div class="jarallax-img" style="background-image: url('/assets/img/announcement/annonce_bandeau_img.jpg');"></div>
+    <div class="jarallax-img"
+      style="background-image: url('/assets/img/myjss-services/documents/banniere_document.png');"></div>
   </div>
 </section>
 
@@ -31,31 +32,28 @@
 
 <description-my-account></description-my-account>
 
-
-<section class="container mt-lg-3 mt-xl-4 mt-xxl-5">
+<section class="container mt-lg-3 mt-xl-4 mt-xxl-5 pt-lg-5 pt-sm-3 pt-2">
   <div class="bg-yellow-custom rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
     <div class="row align-items-center position-relative">
       <div class="col-md-6 col-lg-5 offset-lg-1 text-container">
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
           <div class="d-flex align-items-center justify-content-center justify-content-md-start mb-2">
-            <span class="text-blue opacity-70 me-2 d-none d-md-block"
-              style="width: 40px; height: 1px; margin-top: -1px;"></span>
-            <span class="fs-xs fw-semibold text-blue opacity-70 text-uppercase">Documents</span>
+            <span class="text-blue opacity-70 me-2 " style="width: 40px; height: 1px; margin-top: -1px;"></span>
+            <span class="fs-xs fw-semibold text-blue text-uppercase">Fourniture de document</span>
           </div>
-          <h2 class="h1 pb-2 pb-sm-3 secondary-heading">N'attendez plus et accédez à nos solutions</h2>
-          <double-buttons orderActionLabel="Récupérer mes documents juridiques" quotationActionLabel="Demander un devis"
+          <h2 class="h2 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
+          <double-buttons orderActionLabel="Commander des documents" quotationActionLabel="Demander un devis"
             [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
 
       <div class="col-md-6 holo-img">
-        <img class="d-none d-md-block" src="assets/img/announcement/holo_employe.png" alt="Image">
+        <img class="d-none d-md-block" src="assets/img/myjsss-services/announcement/holo_employe.png" alt="Image">
       </div>
     </div>
   </div>
 </section>
-
 
 <section class="py-5">
   <div class="container py-3 py-sm-4 py-lg-5 my-md-2 my-lg-3 my-xl-4 my-xxl-5">
@@ -69,8 +67,7 @@
           <div class="card-body pb-3">
             <img src="assets/img/icons/assistance_dedie.svg" alt="Icon">
             <h3 class="h4 text-white">Assistance dédiée</h3>
-            <p class="mb-0">Nos équipes spécialisées sont à votre disposition pour vous conseiller, par téléphone ou
-              par e-mail. Bénéficiez d'un accompagnement précis et personnalisé !</p>
+            <p class="mb-0">Nos équipes vous conseillent par téléphone ou par mail à chaque étape.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
           </div>
@@ -82,8 +79,7 @@
           <div class="card-body pb-3">
             <img src="assets/img/icons/expertise_reconnue.svg" alt="Icon">
             <h3 class="h4 text-white">Expertise reconnue</h3>
-            <p class="mb-0">Nous garantissons un service premium, incluant le conseil, la relecture approfondie, et la
-              rédaction optimisée de vos annonces légales, pour un traitement efficace !</p>
+            <p class="mb-0">Bénéficiez de notre savoir-faire pour obtenir vos documents.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
           </div>
@@ -95,8 +91,7 @@
           <div class="card-body pb-3">
             <img src="assets/img/icons/plateforme_intuitive.svg" alt="Icon">
             <h3 class="h4 text-white">Plateforme intuitive</h3>
-            <p class="mb-0">Obtenez en quelques secondes votre attestation de parution, disponible 24h/24 et 7j/7.
-              Simplifiez vos formalités en accédant instantanément à vos documents.</p>
+            <p class="mb-0">Effectuez vos demandes de documents en quelques clics.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
           </div>
@@ -106,7 +101,7 @@
         <div class="card h-100 border-0 rounded-5 ">
           <div class="card-body pb-3">
             <img src="assets/img/icons/plateforme_intuitive.svg" alt="Icon">
-            <h3 class="h4 text-white">traitement rapide</h3>
+            <h3 class="h4 text-white">Traitement rapide</h3>
             <p class="mb-0">Recevez vos documents dans les meilleurs délais.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
@@ -123,7 +118,8 @@
     <div class="col-md-6 position-relative pb-3 pb-md-0 mb-2 mb-sm-3 mb-md-0">
       <div class="binded-content z-2">
         <div class="binded-item active" id="image1">
-          <img class="d-block rounded-5 w-75" src="assets/img/myjss-services/document_office.png" alt="Image">
+          <img class="d-block rounded-5 w-100" src="assets/img/myjss-services/documents/gagnez_du_temps.jpg"
+            alt="Image">
         </div>
       </div>
     </div>
