--- a/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
+++ b/client-myjss/src/app/modules/my-services/components/domiciliation/domiciliation.component.html
@@ -9,7 +9,7 @@
         <p class="text-body fs-lg mb-5 text-white">Domiciliez votre entreprise à une adresse prestigieuse au cœur de
           Paris et bénéficiez d’un service de redirection personnalisé. </p>
         <double-buttons orderActionLabel="Domicilier mon entreprise" quotationActionLabel="Demander un devis"
-          linkLabel="Lien vers la page métier">
+          linkLabel="Bien choisir la domiciliation d'entreprise">
         </double-buttons>
       </div>
     </div>
@@ -17,7 +17,8 @@
 </section>
 <section>
   <div class="jarallax overflow-hidden z-2" data-speed="0.5">
-    <div class="jarallax-img" style="background-image: url('/assets/img/announcement/annonce_bandeau_img.jpg');"></div>
+    <div class="jarallax-img"
+      style="background-image: url('/assets/img/myjss-services/domiciliation/banniere_domiciliation.png');"></div>
   </div>
 </section>
 
@@ -25,7 +26,7 @@
 <explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg"
   videoPath="assets/images/test_video.mp4" title="Domiciliez votre entreprise en 3 étapes"
   firstStepTitle="Choisissez votre formule"
-  firstStepDescription="Sélectionnez le type de renvoi de courrier (postal, digital ou les deux)."
+  firstStepDescription="Sélectionnez le type de renvoi de courrier (postal, digital ou les deux) et la langue (FR/EN) de rédaction de votre contrat."
   secondStepTitle="Téléversez les pièces justificatives"
   secondStepDescription="Déposez les pièces nécessaire à l'établissement de votre contrat de domiciliation directement sur le site. Ces pièces varient si c'est une société ou une succursale à domicilier."
   thirdStepTitle="Recevez votre contrat par email"
@@ -33,25 +34,24 @@
 
 <description-my-account></description-my-account>
 
-<section class="container mt-lg-3 mt-xl-4 mt-xxl-5">
+<section class="container mt-lg-3 mt-xl-4 mt-xxl-5 pt-lg-5 pt-sm-3 pt-2">
   <div class="bg-yellow-custom rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
     <div class="row align-items-center position-relative">
       <div class="col-md-6 col-lg-5 offset-lg-1 text-container">
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
           <div class="d-flex align-items-center justify-content-center justify-content-md-start mb-2">
-            <span class="text-blue opacity-70 me-2 d-none d-md-block"
-              style="width: 40px; height: 1px; margin-top: -1px;"></span>
-            <span class="fs-xs fw-semibold text-blue opacity-70 text-uppercase">Domiciliation</span>
+            <span class="text-blue opacity-70 me-2 " style="width: 40px; height: 1px; margin-top: -1px;"></span>
+            <span class="fs-xs fw-semibold text-blue text-uppercase">Domiciliation</span>
           </div>
-          <h2 class="h1 pb-2 pb-sm-3 secondary-heading">N'attendez plus et accédez à nos solutions</h2>
+          <h2 class="h2 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
           <double-buttons orderActionLabel="Domicilier mon entreprise" quotationActionLabel="Demander un devis"
-            linkLabel="Lien vers la page métier" [isLightButtons]="false">
+            linkLabel="Bien choisir la domiciliation d'entreprise" [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
 
       <div class="col-md-6 holo-img">
-        <img class="d-none d-md-block" src="assets/img/announcement/holo_employe.png" alt="Image">
+        <img class="d-none d-md-block" src="assets/img/myjss-services/domiciliation/holo_emma.png" alt="Image">
       </div>
     </div>
   </div>
@@ -125,8 +125,8 @@
   <div class="container">
     <div class="row d-flex align-items-stretch">
       <div class="col-md-7 order-md-1">
-        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/myjss-services/bd-haussman-offices.png"
-          alt="Image">
+        <img class="object-fit-cover w-100 h-100 rounded-3"
+          src="assets/img/myjss-services/domiciliation/adresse_strategique.jpg" alt="Image">
       </div>
 
       <div class="col-md-5 order-md-2 mt-4 mt-md-0">
@@ -137,17 +137,7 @@
             entreprise établie, une adresse parisienne inspire confiance et crédibilité auprès de vos clients,
             partenaires et investisseurs.<br><br> Paris, capitale d’opportunités, est un carrefour stratégique où se
             rencontrent grands groupes, entrepreneurs et institutions financières.<br><br>
-            Profitez d’une solution clé en main pour simplifier la gestion de votre courrier :</p>
-          <ul class="list-unstyled mb-4 mb-xl-5">
-            <li class="d-flex pb-2 mb-1">
-              <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Scan et renvoi de vos courriers
-            </li>
-            <li class="d-flex pb-2 mb-1">
-              <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Contrat de domiciliation en français ou bilingue
-            </li>
-          </ul>
+            Profitez d’une solution clé en main pour simplifier la gestion de votre courrier.</p>
         </div>
       </div>
     </div>
@@ -159,8 +149,8 @@
   <div class="container">
     <div class="row g-4">
       <div class="col-md-7 order-md-2">
-        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/myjss-services/flexible-options.png"
-          alt="Image">
+        <img class="object-fit-cover w-100 h-100 rounded-3"
+          src="assets/img/myjss-services/domiciliation/option_flexible.png" alt="Image">
       </div>
       <div class="col-md-5 order-md-1">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 py-5 px-4 px-lg-5">
