--- a/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
+++ b/client-myjss/src/app/modules/my-services/components/formality/formality.component.html
@@ -16,17 +16,19 @@
 </section>
 <section>
   <div class="jarallax overflow-hidden z-2" data-speed="0.5">
-    <div class="jarallax-img" style="background-image: url('/assets/img/announcement/annonce_bandeau_img.jpg');"></div>
+    <div class="jarallax-img"
+      style="background-image: url('/assets/img/myjss-services/formalites/banniere_formalites.png');">
+    </div>
   </div>
 </section>
 
 
 <explaination-video posterPath="assets/img/announcement/annonce_bandeau_img.jpg"
   videoPath="assets/images/test_video.mp4" title="Déposez votre formalité en 3 étapes"
-  firstStepTitle="Sélectionnez votre formalité"
-  firstStepDescription="Choisissez les évènements ou mises à jour à formaliser."
-  secondStepTitle="Identifiez la structure concernée"
-  secondStepDescription="Saisissez les informations de la structure à créer ou le SIRET de l’entité existante."
+  firstStepTitle="Identifiez la structure concernée"
+  firstStepDescription="Saisissez les informations de la structure à créer ou le SIRET de l’entité existante."
+  secondStepTitle="Sélectionnez vore formalité  "
+  secondStepDescription="Choisissez les évènements ou mises à jour à formaliser."
   thirdStepTitle="Remplissez le bon de commande et téléversez les pièces justificatives"
   thirdStepDescription="Naviguez sur une interface sécurisée et optimisée pour un traitement rapide et fiable de vos informations."></explaination-video>
 
@@ -41,7 +43,7 @@
         </h2>
         <div class="image-height d-lg-block d-none">
           <div class="card h-100 border-0">
-            <img src="assets/img/myjss-services/carousel_formality_init.jpg" class="card object-fit-cover h-100"
+            <img src="assets/img/myjss-services/formalites/formalites_courantes.jpg" class="card object-fit-cover h-100"
               alt="Card image">
           </div>
         </div>
@@ -70,25 +72,23 @@
   </div>
 </section>
 
-<section class="container my-lg-3 my-xl-4 my-xxl-5 pt-5">
-  <div class="bg-yellow-custom rounded-5 overflow-hidden my-2 my-sm-4 my-lg-5">
+<section class="container mt-lg-3 mt-xl-4 mt-xxl-5 pt-lg-5 pt-sm-3 pt-2">
+  <div class="bg-yellow-custom rounded-5 overflow-hidden mt-2 mt-sm-4 mt-lg-5">
     <div class="row align-items-center position-relative">
       <div class="col-md-6 col-lg-5 offset-lg-1 text-container">
         <div class="text-center text-md-start py-5 px-4 px-sm-5 pe-md-0 ps-lg-4 ps-xl-5">
           <div class="d-flex align-items-center justify-content-center justify-content-md-start mb-2">
-            <span class="text-blue opacity-70 me-2 d-none d-md-block"
-              style="width: 40px; height: 1px; margin-top: -1px;"></span>
-            <span class="fs-xs fw-semibold text-blue opacity-70 text-uppercase"> Formalités légales</span>
+            <span class="text-blue opacity-70 me-2 " style="width: 40px; height: 1px; margin-top: -1px;"></span>
+            <span class="fs-xs fw-semibold text-blue text-uppercase">Formalité légale</span>
           </div>
-          <h2 class="h1 pb-2 pb-sm-3 secondary-heading">N'attendez plus et accédez à nos solutions</h2>
-          <double-buttons orderActionLabel="Déposer ma formalité" quotationActionLabel="Demander un devis"
+          <h2 class="h2 secondary-heading pb-2 pb-sm-3 ">N'attendez plus et accédez à nos solutions</h2>
+          <double-buttons orderActionLabel="Déposer une formalité" quotationActionLabel="Demander un devis"
             [isLightButtons]="false">
           </double-buttons>
         </div>
       </div>
-
       <div class="col-md-6 holo-img">
-        <img class="d-none d-md-block" src="assets/img/announcement/holo_employe.png" alt="Image">
+        <img class="d-none d-md-block" src="assets/img/myjss-services/formalites/holo_lea.png" alt="Image">
       </div>
     </div>
   </div>
@@ -158,38 +158,45 @@
   <div class="container">
     <div class="row g-4">
       <div class="col-md-7 order-md-2">
-        <img class="object-fit-cover w-100 h-100 rounded-3" src="assets/img/myjss-services/formality_office.png"
-          alt="Image">
+        <img class="object-fit-cover w-100 h-100 rounded-3"
+          src="assets/img/myjss-services/formalites/gerer_vos_formalites.jpg" alt="Image">
       </div>
       <div class="col-md-5 order-md-1">
         <div class="d-flex flex-column h-100 card border-0 rounded-3 py-5 px-4 px-lg-5">
           <h2 class="mb-xl-4">Le JSS vous propose de gérer toutes vos formalités</h2>
           <p class="mb-4 mb-xl-5">Simples comme complexes, nous vous conseillons et gérons toutes les formalités légales
-            liées à la vie de votre entreprise (immatriculation, modification…) avec une prise en charge sous 24h.
-            Nous la transmettons aux organismes sociaux concernés :</p>
+            liées à la vie de votre entreprise (immatriculation, modification…) avec une prise en charge sous 48h.
+            Nous la transmettons aux autorités compétentes via le Guichet Unique (INPI) :</p>
           <ul class="list-unstyled mb-4 mb-xl-5">
             <li class="d-flex pb-2 mb-1">
               <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Guichet Unique (INPI)
+              INSEE
             </li>
             <li class="d-flex pb-2 mb-1">
               <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Registre du Commerce et des Sociétés
+              Greffe du tribunal de commerce
             </li>
             <li class="d-flex pb-2 mb-1">
               <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Chambre de Commerce
+              Greffe du tribunal judiciaire
             </li>
             <li class="d-flex pb-2 mb-1">
               <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Chambre des métiers
+              Chambre des métiers et de l’artisanat (CMA)
             </li>
             <li class="d-flex pb-2 mb-1">
               <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
-              Impôts...
+              Centre des impôts (DGFIP)
+            </li>
+            <li class="d-flex pb-2 mb-1">
+              <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
+              Mutuelle agricole (MSA)
+            </li>
+            <li class="d-flex pb-2 mb-1">
+              <span class="bg-primary mt-2 me-2 checkbox-custom"></span>
+              URSSAF
             </li>
           </ul>
-          <p>Nous contrôlons les pièces post-formalités avant de vous les délivrer.</p>
         </div>
       </div>
     </div>
@@ -201,7 +208,8 @@
     <div class="col-md-6 position-relative pb-3 pb-md-0 mb-2 mb-sm-3 mb-md-0">
       <div class="binded-content z-2">
         <div class="binded-item active" id="image1">
-          <img class="d-block rounded-5" src="assets/img/landing/marketing-agency/case-studies/01.jpg" alt="Image">
+          <img class="d-block rounded-5" src="assets/img/myjss-services/formalites/externaliser_formalites.jpg"
+            alt="Image">
         </div>
       </div>
     </div>
@@ -215,9 +223,8 @@
           Grâce à nos experts en formalités, nous traitons vos démarches rapidement, vous faisant gagner du temps pour
           vous consacrer à votre coeur de métier.
 
-          MyJSS accompagne plus de 30 000 entreprises chaque année dans la gestion de leurs formalités légales.
-
-          MyJSS s’engage à prendre en charge votre formalité sous 48h.</p>
+          MyJSS accompagne plus de 30 000 entreprises chaque année dans la gestion de leurs formalités légales et
+          s’engage à prendre en charge leurs formalités sous 48h.</p>
         <div class="d-flex d-md-none d-lg-flex justify-content-between w-100 pb-4 pb-xl-5 mb-2 mb-sm-3 mb-xl-2"
           style="max-width: 440px;">
           <div class="pe-4">
@@ -268,7 +275,7 @@
             <img src="assets/img/icons/Apostille.svg" alt="Icon">
             <h3 class="h4 text-white" routerLink="/services/apostille" style="cursor: pointer;">Apostille & Légalisation
             </h3>
-            <p class="mb-0">Authentification et certification rapide et conforme de vos documents valables à
+            <p class="mb-0">Authentification et certification rapides et conformes de vos documents valables à
               l’international.</p>
           </div>
           <div class="card-footer border-0 pt-3 mb-3">
